[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Menues/IntroMenu/MainMenuControlFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Menues/IntroMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menues/IntroMenu/IntroSceneBackground_1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menues/IntroMenu/Roboto-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/GameHUD/PauseHUD/ControlScheme_PopUp.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.282353, 0.72549, 0.952941, 1 )

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0.219608, 0.219608, 0.219608, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=4]
size = 25
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.282353, 0.72549, 0.952941, 1 )

[sub_resource type="StyleBoxFlat" id=8]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Control2" type="Control" parent="."]

[node name="TextureRect3" type="TextureRect" parent="Control2"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="Control2"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/MarginContainer2"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="Control2/MarginContainer2/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "AWT Kart Game"
align = 1
valign = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="Control2/MarginContainer2/VBoxContainer"]
margin_left = 512.0
margin_top = 302.0
margin_right = 512.0
margin_bottom = 306.0
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4"]
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer"]

[node name="Control" type="Control" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer/MarginContainer"]

[node name="PlayButton" type="Button" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer/MarginContainer/Control"]
margin_left = -178.0
margin_top = 169.0
margin_right = 202.0
margin_bottom = 245.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
text = "PLAY"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4"]
margin_top = 4.0
margin_bottom = 4.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer2"]

[node name="Control" type="Control" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer2/MarginContainer"]

[node name="ControlButton" type="Button" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer2/MarginContainer/Control"]
margin_left = -178.0
margin_top = 110.0
margin_right = 202.0
margin_bottom = 150.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 3 )
text = "Controls"

[node name="ControlsImage" type="TextureRect" parent="Control2"]
visible = false
margin_left = 171.0
margin_top = 134.0
margin_right = 2219.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 5 )

[node name="CloseControls" type="Button" parent="Control2/ControlsImage"]
margin_left = 1878.79
margin_top = 39.3939
margin_right = 2008.79
margin_bottom = 166.394
text = "x"

[node name="Label" type="Label" parent="Control2/ControlsImage/CloseControls"]
margin_left = 39.3938
margin_top = -3.0303
margin_right = 175.394
margin_bottom = 114.97
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 1 )
text = "x"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 298 )
current = true

[connection signal="pressed" from="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer/MarginContainer/Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer2/MarginContainer/Control/ControlButton" to="." method="_on_ControlButton_pressed"]
[connection signal="pressed" from="Control2/ControlsImage/CloseControls" to="." method="_on_CloseControls_pressed"]
