[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Menues/WinScene/IntroSceneBackground_8.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menues/IntroMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menues/IntroMenu/Roboto-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="WinScreeen" type="Node2D"]
script = ExtResource( 2 )

[node name="Control2" type="Control" parent="."]

[node name="TextureRect3" type="TextureRect" parent="Control2"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="Control2"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/MarginContainer2"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="Control2/MarginContainer2/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "You WIN"
align = 1
valign = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="Control2/MarginContainer2/VBoxContainer"]
margin_left = 512.0
margin_top = 302.0
margin_right = 512.0
margin_bottom = 306.0
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4"]
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer"]

[node name="Control" type="Control" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer/MarginContainer"]

[node name="PlayAgainButton" type="Button" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer/MarginContainer/Control"]
margin_left = -192.0
margin_top = 178.0
margin_right = 192.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Play Again"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4"]
margin_top = 4.0
margin_bottom = 4.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer2"]

[node name="Control" type="Control" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer2/MarginContainer"]

[node name="MenuButton" type="Button" parent="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer2/MarginContainer/Control"]
margin_left = -192.0
margin_top = 86.0
margin_right = 192.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Menu"

[connection signal="pressed" from="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer/MarginContainer/Control/PlayAgainButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control2/MarginContainer2/VBoxContainer/VBoxContainer4/VBoxContainer2/MarginContainer/Control/MenuButton" to="." method="_on_MenuButton_pressed"]
